Summary of changes between versions 0.9.4 and 0.9.5
---------------------------------------------------

 - Fixed many found task management related problems, especially in the
   RESETs area. DEBUG_TM compilation option added (see README).

 - Timer-based retries for targets after SCST_TGT_RES_QUEUE_FULL status
   implemented.

 - Fixed broken CDROM FILEIO. Before that it always reported 
   "No medium found"

 - Fixed READ(6)/WRITE(6) CDB decoding for block devices.
   This bug prevented FreeBSD initiator from working.

 - Implemented sgv_pool. It is mempool-like interface, which caches
   built SG-vectors in order not to rebuild them again for every
   subsequent command, so saves performance price of building
   SG-vectors, including pages allocation, and of additional context
   switches.

 - For ABORTED commands xmit_response() now called. A target driver
   should recognized such commands using new function
   scst_cmd_aborted(). Also there are some other cleanups, improvements
   and interfaces changes that affect target drivers and dev handlers.
   You can find their full list by diff'ing scsi_tgt.h between versions
   0.9.4 and 0.9.5.

 - Function alloc_data_buf() added to struct scst_tgt_template as well
   as data_buf_tgt_alloc added to struct scst_cmd to allow a target
   driver implement own memory management handler (by Arne Redlich
   <arne.redlich@xiranet.com>).

 - Exported symbols are now not GPL'ed

 - Various cleanups and bug fixes.

Summary of changes between versions 0.9.3 and 0.9.4
---------------------------------------------------

 - Support for 2.4 kernels has been removed

 - Added on_free_cmd() callback for dev handlers

 - Fixed BUG() on task aborts.

 - Fixed WCE (Write Cache Enabled) handling in FILEIO 
   (by Ming Zhang <mingz@ele.uri.edu>)

 - Minor cleanups and bug fixes.

Summary of changes between versions 0.9.3-pre4 and 0.9.3
--------------------------------------------------------
